# DRIVERLESS_TESTS

./: Dockerfile
.github/workflows/: main.yml
example_tests/: CMakeLists.txt  package.xml
example_tests/data/number_bag/: metadata.yaml  number_bag_0.db3
example_tests/include/example_tests/: number_publisher.hpp
example_tests/src/: number_publisher.cpp
example_tests/tests/: example_rosbag_test.cpp  example_rosbag_test.h  example_test.cpp
perception_tests/: CMakeLists.txt  package.xml
perception_tests/data/rosbag2_2025_04_13-16_41_08/: metadata.yaml
perception_tests/tests/: perception_test.cpp
planning_tests/: CMakeLists.txt  package.xml
planning_tests/data/: path_planning_test.mcap
planning_tests/tests/: planning_test.cpp
tools/result_procesor/: result_reader.py  test_result_parser.py
tools/test_reporter/: report_generator.py
